[package]
name = "frontend-base-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
nacos-sdk = { version = "0.2", features = ["async"] }
dapr = { path = "../rust-sdk" }
tonic = "0.9"
serde_yaml = "0.9"
serde_json = "1"

[build-dependencies]
tonic-build = "0.9"
