[package]
name = "frontend_base_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
nacos-sdk = { version = "0.2", features = ["async"] }
dapr = "0.11"
tonic = "0.8"
serde_yaml = "0.9"
serde_json = "1"
tracing = "0.1"
prost-types = "0.11"
prost = "0.11"

[build-dependencies]
tonic-build = "0.8"
